# sales-forecast-telebot

./: LICENSE  app.py  build.sh  fix_render_deploy.sh  model.py  pyproject.toml  render.yaml  requirements.txt  sales_model.joblib
