[tool.poetry]
name = "sales-forecast-bot"
version = "1.0.0"
description = "Bot de Previsão de Vendas com Telegram"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.0.3"
numpy = "1.24.3"
scikit-learn = "1.3.0"
matplotlib = "3.7.2"
seaborn = "0.12.2"
flask = "2.3.3"
flask-cors = "4.0.0"
gunicorn = "21.2.0"
joblib = "1.3.2"
python-dotenv = "1.0.0"
python-telegram-bot = "20.7"
twilio = "8.10.0"
openpyxl = "3.1.2"
plotly = "5.15.0"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
